maintainIT2/src/objects/Asset__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <description>Describes the status of the asset in its lifecycle - User Defined (Do not remove &quot;Disposed&quot; status).</description>
        <inlineHelpText>Describes the status of the asset in its lifecycle - User Defined</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Service</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Idle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Transit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street Address for Asset Tag</description>
        <inlineHelpText>Street Address</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>Guideway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trackwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Structures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus Guideway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage Yard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Shops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Train Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadway Traffic Signals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signage &amp; Graphics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Revenue Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment/Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Element__c</fullName>
        <label>Sub Element</label>
        <picklist>
            <controllingField>Element__c</controllingField>
            <picklistValues>
                <fullName>Commuter Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expressway Commuter Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expressway Heavy Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expressway Light Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ductbank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manhole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade Crossing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade Crossing Commuter Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade Crossing Heavy Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade Crossing Light Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade Crossing - Panelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade Crossing - Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel Viaducts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel Viaducts Commuter Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel Viaducts Heavy Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel Viaducts Light Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge Commuter Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge Heavy Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge Light Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foot Walk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tunnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tunnel Commuter Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tunnel Heavy Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tunnel Light Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cut &amp; Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cut &amp; Cover Commuter Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cut &amp; Cover Heavy Rail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Synced_Error_Message__c</fullName>
        <label>Synced Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synced_Platform__c</fullName>
        <label>Synced Platform</label>
        <picklist>
            <picklistValues>
                <fullName>CalAmp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroku</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Synced_Status__c</fullName>
        <formula>IF(ISPICKVAL(Synced_Platform__c, &quot;Heroku&quot;),IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;Record Synced With Heroku&quot;),IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;Record not Synced&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Synced Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Optional Attribute that can be used to define an asset as being the top level of a hierarchy.  Does not keep you from adding children to the asset.</description>
        <inlineHelpText>Optional Attribute that can be used to define an asset as being the top level of a hierarchy.  Does not keep you from adding children to the asset.</inlineHelpText>
        <label>Top Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <description>Transmission Type for Vehicle - User Defined</description>
        <inlineHelpText>Transmission Type</inlineHelpText>
        <label>Transmission</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic 3 Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic 4 Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual 3 Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual 4 Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual 5 Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual 6 Speed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Asset Type is for categorization purposes - User Defined</description>
        <inlineHelpText>Asset Type is for categorization purposes - User Defined</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furnishings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT/Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instrumentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>Seventeen digits in total.  The first three digits (1, 2, 3) indicating the World Manufacturer Identifier or the company which made the car. The next six (4, 5, 6, 7, 8, 9) digits indicate the vehicle characteristics or CarsDirect description. The next number (10) indicates the Model year of the car you have chosen. The next number (11) indicates the plant code where the car was made. The 12th, 13th and 14th number indicates the manufacturer identifier, and 15th, 16th and 17th number indicating the sequential numbers</description>
        <inlineHelpText>Vehicle Identification Number</inlineHelpText>
        <label>VIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiration_Date__c</fullName>
        <description>Warranty Expiration Date - User Defined</description>
        <inlineHelpText>Warranty Expiration Date - User Defined</inlineHelpText>
        <label>Warranty Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if a Warranty applies to an Asset - User Defined</description>
        <inlineHelpText>Designates if a Warranty applies to an Asset - User Defined</inlineHelpText>
        <label>Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wheel_Drive__c</fullName>
        <description>Wheel Drive</description>
        <inlineHelpText>Wheel Drive</inlineHelpText>
        <label>Wheel Drive</label>
        <picklist>
            <picklistValues>
                <fullName>FWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4WD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip/Postal Code Address</description>
        <inlineHelpText>Zip/Postal Code Address</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Components</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Parent__c</columns>
        <columns>Parent_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset__c.Component</value>
        </filters>
        <label>All Components</label>
    </listViews>
    <listViews>
        <fullName>All_Equipment</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Parent__c</columns>
        <columns>Parent_Description__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Equipment__c.Equipment</value>
        </filters>
        <label>All Equipment</label>
    </listViews>

 <listViews>
        <fullName>All_Locations</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Parent__c</columns>
        <columns>Parent_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset__c.Location</value>
        </filters>
        <label>All Locations</label>
        <language>en_US</language>
    </listViews>

<listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Parent__c</columns>
        <columns>Parent_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Warranty__c</columns>
        <columns>Warranty_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>Top_Level_Locations</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Parent__c</columns>
        <columns>Parent_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Equipment__c.Location</value>
        </filters>
        <filters>
            <field>Top_Level__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Top Level Locations</label>
    </listViews>

   
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <recordTypes>
        <fullName>Asset</fullName>
        <active>true</active>
        <description>Asset</description>
        <label>Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Component</fullName>
        <active>true</active>
        <description>Component</description>
        <label>Component</label>
    </recordTypes>

    <recordTypes>
        <fullName>Building</fullName>
        <active>true</active>
        <description>Building</description>
        <label>Building</label>
    </recordTypes>


    <recordTypes>
        <fullName>Facilities</fullName>
        <active>true</active>
        <label>Facilities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guideway_Elements</fullName>
        <active>true</active>
        <label>Guideway Elements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <description>Location</description>
        <label>Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stations</fullName>
        <active>true</active>
        <label>Stations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Systems</fullName>
        <active>true</active>
        <label>Systems</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle</fullName>
        <active>true</active>
        <description>Vehicle</description>
        <label>Vehicle</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicles</fullName>
        <active>true</active>
        <label>Vehicles</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>